[gd_scene format=3 uid="uid://b3hrw75sbhmls"]

[ext_resource type="Script" uid="uid://let2cymie1mc" path="res://scenes/ui/screens/pause.gd" id="1_2xasb"]
[ext_resource type="FontFile" uid="uid://dyw0fu3dx5u67" path="res://assets/fonts/NightsideDemoRegular.ttf" id="2_ea0c3"]
[ext_resource type="AudioStream" uid="uid://4x53gtxdnqu3" path="res://assets/ost/Tecla.ogg" id="2_mftd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ea0c3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5o3u5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mftd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xaq1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3c00u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjygo"]

[node name="pause" type="Control" unique_id=137087466]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xasb")

[node name="Panel" type="Panel" parent="." unique_id=536946973]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel" unique_id=1944998783]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -10.0
offset_right = -9.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.09411765, 0.09411765, 0.09411765, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=653839022]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.28100002
anchor_top = 0.24700001
anchor_right = 0.697
anchor_bottom = 0.66700006
offset_left = 0.28796387
offset_top = -0.055999756
offset_right = 0.05596924
offset_bottom = -0.21603394
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="buttonsound" type="AudioStreamPlayer" parent="VBoxContainer" unique_id=1563703593]
stream = ExtResource("2_mftd0")

[node name="resume" type="Button" parent="VBoxContainer" unique_id=2078689154]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.65566003, 0.10734648, 0.233307, 1)
theme_override_fonts/font = ExtResource("2_ea0c3")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxEmpty_ea0c3")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5o3u5")
text = "RESUME"

[node name="main_menu" type="Button" parent="VBoxContainer" unique_id=1136210272]
layout_mode = 2
theme_override_colors/font_color = Color(0.65566003, 0.10734648, 0.233307, 1)
theme_override_fonts/font = ExtResource("2_ea0c3")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxEmpty_mftd0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3xaq1")
text = "MAIN MENU
"

[node name="exit" type="Button" parent="VBoxContainer" unique_id=1409777245]
layout_direction = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.65566003, 0.10734648, 0.233307, 1)
theme_override_fonts/font = ExtResource("2_ea0c3")
theme_override_font_sizes/font_size = 54
theme_override_styles/normal = SubResource("StyleBoxEmpty_3c00u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sjygo")
text = "EXIT
"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
